# FBX2glTF

./: .gitignore  CMakeLists.txt  index.js  package.json
.github/workflows/: PullRequestyml.yml  Release.yml  get-version.sh
CI/: build.sh
npm/fbx2gltf/: package.json
src/fbx/materials/: 3dsMaxPhysicalMaterial.cpp  StingrayPBSMaterial.cpp
src/gltf/: TextureBuilder.cpp
src/utils/: File_Utils.cpp  File_Utils.hpp
